# paper-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE-NONCODE  README.md  pyproject.toml
paper/: .gitignore  main.tex
