[project]
name = "TODO"
version = "0.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
]

[dependency-groups]
dev = [
  "ruff",
  "pre-commit",
]

test = [
  "pytest",
]

docs = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.build.targets.wheel]
# packages = ["src/TODO"]

[tool.ruff]
[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E741"]

[tool.uv]
default-groups = ["dev"]
